Ros2_workspace/log/build_2022-05-12_13-29-09/got_coffe/stderr.log
  File "/home/xilinx/wrkspace/install/got_coffe/lib/python3.8/site-packages/got_coffe/nn_pub.py", line 6
    from pynq-dpu import DpuOverlay
             ^
SyntaxError: invalid syntax

